--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solana-froth",
-  "displayName": "solana-froth",
-  "description": "",
+  "displayName": "Solana Froth",
+  "description": "Info about Solana blockchain and wallets.",
   "version": "0.4.0",
   "repository": {
     "type": "git",
@@ -44,19 +44,20 @@
     "commands": [
       {
         "command": "solana-froth.refresh",
+        "category": "Solana Froth",
         "title": "Refresh"
       },
       {
         "command": "solana-froth.refresh-view",
+        "category": "Solana Froth",
         "title": "Refresh View"
       }
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "webpack",
+    "vscode:prepublish": "npm run compile",
+    "compile": "rollup -c && webpack --mode production --devtool hidden-source-map",
     "watch": "concurrently \"rollup -c -w\" \"webpack --mode development --watch\"",
-    "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
